# PAYTAP

./: README.md  pyproject.toml  setup.py
src/pytap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pytaps/: __init__.py  config.py  config_utils.py  data_utils.py  date_time_utils.py  email_utils.py  fetchdata.py  file_operation.py  file_operations.py  grib_processor.py  logging_utils.py  numpy_utils.py  system_utils.py  time_utils.py
src/pytaps.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
